Fix tag wrap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -187,7 +187,8 @@ span.glyphicon {
   font-size: 12px;
   padding-top: 2px;
   padding-bottom: 2px;
-  white-space: pre;
+  white-space: pre-wrap;
+  max-width: 400px;
 }
 
 .pagination {
